
5.2a2 -> 5.2a3:
    - jbj: EVRtuple: teach --whatneeds/--needswhat to use EVR_t opaquely.
    - jbj: EVRtuple: add rpmEVR{new,free} creator and destructors.
    - jbj: EVRtuple: mark the old EVRD parser for destruction.
    - jbj: EVRtuple: use the new EVRD pattern parser, reverse the assert check.
    - jbj: EVRtuple: precedence permutation for rpmdsCompare().
    - jbj: EVRtuple: precedence permutation for rpmVersionCompare().
    - jbj: EVRtuple: blueprint new <-> old parsers with an assert.
    - jbj: EVRtuple: parse EVRD using RPMMIRE_REGEX & evr_tuple_match.
    - jbj: EVRtuple: wire up evr_tuple_match RE pattern match.
    - jbj: EVRtuple: wire up evr_tuple_order precedence permutation.
    - jbj: EVRtuple: use array for tuple storage.
    - rse: EVRtuple: macro configuration parameterization.
    - proyvind: rpmio: include lzma.h header so that LZMA_VERSION actually gets
	defined and can be compared (fixes xzdio breakage).
    - proyvind: xzdio: add a couple of missing print messages.
    - proyvind: add %__xz macro.
    - proyvind: rpmdb/tjfn: fix build breakage.
    - proyvind: lib/tgi: fix build breakage.
    - proyvind: rpmio/rpmz: merge with recent xz code to work with recent liblzma API
	changes.
    - proyvind: rpmio/lookup3: fix build breakage.
    - proyvind: rpmio/tpw: fix linking against librpm.
    - proyvind: rpmio/rpmtar: fix build breakage.
    - proyvind: rpmio/rpmcpio: fix build breakage.
    - proyvind: rpmio/tmacro: fix build breakage.
    - proyvind: perl: clean out rest of warnings.
    - proyvind: check return value for functions declared with attribute
	warn_unused_result. (some inspired by rpm.org)
    - proyvind: debugedit: perform some cleanups and pull in some from rpm.org
	as well while at it.
    - proyvind: move comparision of DISTEPOCH under NOTYET &
	RPM_VENDOR_MANDRIVA for now.
    - proyvind: only do DISTEPOCH comparision if RELEASE is equal.
    - proyvind: set DISTEPOCH to "" if not present in rpmVersionCompare().